--- a/to-do/src/App.css
+++ b/to-do/src/App.css
@@ -1,3 +1,7 @@
-* {
-  border: 1px solid red;
+#root {
+  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
